2008-06-17  Johnny Jacob  <jjohnny@novell.com>

	* configure.in: Bumped to 2.23.5.

	* NEWS: Updates for Evolution Exchange 2.23.4

2008-06-13  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #402752

	* calendar/e-cal-backend-exchange.c: (get_exchange_comp),
	(e_cal_backend_exchange_add_object),
	(e_cal_backend_exchange_modify_object):
	* calendar/e-cal-backend-exchange-calendar.c: (add_ical):
	Prevent crash when got a component without set UID.

2008-06-07  Paul Smith  <psmith@gnu.org>

	** Fix for bug #532844

	* mail/mail-stub-exchange.c (get_message): If it's a bad case we can 
	just goto the error handling code instead of trying to process the 
	response.

2008-06-06  Matthew Barnes  <mbarnes@redhat.com>

	** Allow evolution-exchange to build with G_DISABLE_SINGLE_INCLUDES
	   and GTK_DISABLE_SINGLE_INCLUDES defined.  (#536638)

2008-06-04  Wang Xin  <jedy.wang@sun.com>

	Fixes #536376

	* configure.in: Check libebackend.

2008-06-02  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.23.3 release and version bump.

2008-06-02  Tor Lillqvist  <tml@novell.com>

	* addressbook/Makefile.am (install-data-local): Work around
	annoying MSYS feature on Win32 when installing the schema: Echo
	the command to a temporary .bat file and run it with cmd.exe...

2008-05-26  Johnny Jacob  <jjohnny@novell.com>

	** Fix for Bug #533422
	
	* storage/Makefile.am (EXTRA_DIST): server_DATA should not
	be packed in dist tarballs.

2008-05-23  Øystein Gisnås  <oystein@gisnas.net>

	** Fix for bug #366250

	* configure.in: Don't compile/package semi-free RFCs and other IETF 
	documents that are easily accessible on the web. 

2008-05-14  Matthew Barnes  <mbarnes@redhat.com>

	** Fix for bug #523023

	* storage/exchange-storage.c: (account_new_folder): Another leak fix.

2008-05-13  Tor Lillqvist  <tml@novell.com>

	Final outstanding Win32 portability changes.

	* storage/Makefile.am: Link with SOCKET_LIBS, too. On Windows, use