@@ -1,3 +1,12 @@
+2008-06-22  Patrick Ohly  <patrick.ohly@gmx.de>
+
+	* calendar/e-cal-backend-exchange-calendar.c,
+	calendar/e-cal-backend-exchange.c,
+	calendar/e-cal-backend-exchange.h: Use e_cal_check_timezones() to
+	match time zone definitions and handle conflicting definitions;
+	requires a new utility function to look up time zone definitions
+	cached in the backend (bug #52890).
+
 2008-06-17  Johnny Jacob  <jjohnny@novell.com>
 
 	* configure.in: Bumped to 2.23.5.
